Change the App ID for the Open Source browser.

--- a/Secure Browser/Secure Browser-Info.plist
+++ b/Secure Browser/Secure Browser-Info.plist
@@ -28,7 +28,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>org.air.securebrowser</string>
+	<string>org.smarterbalanced.securebrowser</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
