Moving icons to Asset Catalog
Apple now requires us to use asset catalog to manage all icons instead of just including these files in the project due to which app submission will fail.

--- a/Secure Browser/Secure Browser.entitlements
+++ b/Secure Browser/Secure Browser.entitlements
@@ -4,5 +4,7 @@
 <dict>
 	<key>com.apple.developer.edu-assessment-mode</key>
 	<true/>
+	<key>com.apple.developer.icloud-container-identifiers</key>
+	<array/>
 </dict>
 </plist>
