--- a/Secure Browser/Secure Browser-Info.plist
+++ b/Secure Browser/Secure Browser-Info.plist
@@ -10,23 +10,12 @@
 	<string>SmarterAppBrowser</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIconName</key>
+	<string>AppIcon</string>
 	<key>CFBundleIcons</key>
-	<dict>
-		<key>CFBundlePrimaryIcon</key>
-		<dict>
-			<key>CFBundleIconFiles</key>
-			<array>
-				<string>Icon-152.png</string>
-				<string>Icon-76.png</string>
-				<string>Icon-72.png</string>
-				<string>Icon-72@2x.png</string>
-				<string>Icon-Small-50.png</string>
-				<string>Icon-Small-50@2x.png</string>
-				<string>Icon.png</string>
-				<string>Icon@2x.png</string>
-			</array>
-		</dict>
-	</dict>
+	<dict/>
+	<key>CFBundleIcons~ipad</key>
+	<dict/>
 	<key>CFBundleIdentifier</key>
 	<string>org.smarterbalanced.securebrowser</string>
 	<key>CFBundleInfoDictionaryVersion</key>
